# data-ocean

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
docs/: test.md  (+4 more)
python-service/: .env.example  Dockerfile  pyproject.toml
python-service/dataocean/: __init__.py  main.py
python-service/dataocean/agent/: __init__.py  cancellation.py  config.py  graph.py  llm.py  prompt_tracking.py  router.py  schema.py  sse.py  state.py
python-service/dataocean/agent/nodes/: __init__.py  data_visualizer.py  query_rewriter.py  schema_retriever.py  sql_executor.py  sql_generator.py  sql_validator.py
python-service/dataocean/agent/prompts/: query_rewrite.j2  sql_generation.j2  visualization.j2
python-service/dataocean/chart/: __init__.py  chart_validator.py  data_aggregator.py  router.py  service.py
python-service/dataocean/core/: __init__.py  config.py  error_messages.py  exceptions.py  logging.py
python-service/dataocean/infra/: __init__.py  auth.py  auto_tagger.py  cancellation.py  config_api.py  embeddings.py  health.py  llm.py  parsers.py  sse.py  timeout_budget.py
python-service/dataocean/knowledge/: __init__.py  router.py  schema.py  service.py
python-service/dataocean/prompt/: __init__.py  renderer.py  router.py  service.py  token_budget.py
python-service/dataocean/rag/: __init__.py  chunker.py  embedder.py  fallback.py  init_collection.py  milvus_client.py  reranker.py  retriever.py  router.py  schema.py  service.py  vector_store.py  vectorizer.py
python-service/dataocean/resilience/: __init__.py  cancellation.py  error_messages.py  health.py  milvus_fallback.py  timeout_budget.py
python-service/dataocean/sandbox/: __init__.py  config.py  executor.py  pool_manager.py  rewriter.py  router.py  schema.py  validator.py
python-service/tests/: conftest.py  test_agent_e2e.py  test_agent_prompt_tracking.py  test_f0_regression.py  test_rag_contract.py  test_rag_degradation.py  test_sandbox.py  test_sandbox_regression.py  test_sql_nodes.py  test_sse_polling.py  test_sse_regression.py
python-service/tests/agent/: test_sql_generation_agent_tools.py  test_sql_generator_agent.py
(+782 files in other folders)
