[project]
name = "python-service"
version = "0.1.0"
description = "DataOcean Python AI service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.60",
    "llama-index>=0.12.0",
    "sqlalchemy>=2.0.36",
    "aiomysql>=0.2.0",
    "sqlglot>=25.30.0",
    "dashscope>=1.20.0",
    "pymilvus>=2.4.9",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[tool.uv]
package = false
