[project]
name = "python-service"
version = "0.1.0"
description = "DataOcean Python AI service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.60",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.0",
    "cryptography>=43.0.0",
    "sqlglot>=25.30.0",
    "pymilvus>=2.4.9",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
